Fixed delete form issue that was not showing the form

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -154,3 +154,9 @@ input{
 .haha{
   width: 10%;
 }
+
+.deleteF{
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  width: 30vw;
+  padding: 1.5rem;
+}
